@@ -28,6 +28,7 @@ version <next>:
 - SDX2 DPCM decoder
 - vibrato filter
 - innoHeim/Rsupport Screen Capture Codec decoder
+- ADPCM AICA decoder
 
 
 version 2.8:
